--- a/demo1/.classpath
+++ b/demo1/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_181"/>
 	<classpathentry kind="lib" path="jacob-1.19/jacob.jar"/>
+	<classpathentry kind="lib" path="D:/wjx/poi-4.1.0/poi-4.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
