--- a/project/pom.xml
+++ b/project/pom.xml
@@ -125,6 +125,25 @@
 			<artifactId>servlet-api</artifactId>
 			<version>3.0-alpha-1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+		<dependency>
+		    <groupId>org.xerial</groupId>
+		    <artifactId>sqlite-jdbc</artifactId>
+		    <version>3.25.2</version>
+		</dependency>
+    		<!-- https://mvnrepository.com/artifact/com.hynnet/jacob -->
+		<dependency>
+		    <groupId>com.hynnet</groupId>
+		    <artifactId>jacob</artifactId>
+		    <version>1.18</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>4.0.0</version>
+		</dependency>
+    		
 	</dependencies>
 	<build>
 		<finalName>ccwihr_server</finalName>
