--- a/demo1/.classpath
+++ b/demo1/.classpath
@@ -11,8 +11,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_181"/>
-	<classpathentry kind="lib" path="jacob-1.19/jacob.jar"/>
-	<classpathentry kind="lib" path="D:/wjx/poi-4.1.0/poi-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/qiang/project/wjx的项目/wjx/poi-4.1.0/poi-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/project/libs/jacob/jacob.jar"/>
+	<classpathentry kind="lib" path="/project/libs/sqlite/sqlite-jdbc-3.27.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
